--- a/app/src/main/res/layout/activity_incoming_call.xml
+++ b/app/src/main/res/layout/activity_incoming_call.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_custom_dialog"
-    android:gravity="center_horizontal"
+    android:background="@color/white"
+    android:gravity="center"
     android:orientation="vertical">
 
 
@@ -15,7 +15,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="55dp">
 
-        <com.linkv.strangechat.widget.CircleImageView
+        <com.linkv.strangechatdemo.widget.CircleImageView
             android:id="@+id/iv_icon"
             android:layout_width="@dimen/head_size"
             android:layout_height="@dimen/head_size"
