--- a/app/src/main/res/layout/activity_live_room.xml
+++ b/app/src/main/res/layout/activity_live_room.xml
@@ -28,11 +28,12 @@
 
 
     <FrameLayout
+        android:id="@+id/container_preview_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="52dp">
+        android:layout_marginBottom="100dp">
 
         <FrameLayout
             android:id="@+id/container_video_small"
@@ -41,9 +42,9 @@
 
         <ImageView
             android:id="@+id/iv_blur_small"
-            android:scaleType="fitXY"
             android:layout_width="120dp"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:scaleType="fitXY" />
     </FrameLayout>
 
     <!--  🎁特效-->
@@ -112,6 +113,55 @@
             android:textColor="@color/white" />
 
     </RelativeLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_msgs"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/container_msg_edit"
+        android:layout_below="@+id/container_gift"
+        android:layout_toStartOf="@+id/container_preview_small"
+        android:paddingEnd="30dp" />
+
+
+    <LinearLayout
+        android:id="@+id/container_msg_edit"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_above="@+id/view_group_bottom"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/et_msg"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+
+            android:background="@drawable/bg_msg_edit"
+            android:layout_height="match_parent"
+            android:hint="@string/say_something"
+            android:paddingStart="20dp"
+            android:textColor="@color/white"
+            android:textColorHint="#DDDDDD" />
+
+        <Button
+            android:id="@+id/btn_send"
+            android:background="@drawable/bg_btn_send"
+            android:text="@string/send"
+            android:visibility="gone"
+            tools:visibility="visible"
+
+            android:layout_gravity="end"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -191,7 +241,7 @@
     <include
         android:id="@+id/container_gift"
         layout="@layout/layout_static_gift"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
     <FrameLayout
         android:id="@+id/layout_gift"
